--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "knuth-shuffle": "^1.0.8"
+  },
   "devDependencies": {
     "prettier": "^1.19.1",
     "tslint": "^5.20.1",
