--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node .",
     "compile": "tsc --noEmit",
     "build": "tsc",
+    "test": "jest",
     "lint": "tslint --project .",
     "prettier": "prettier --list-different \"src/**/*.{ts,tsx}\""
   },
@@ -17,7 +18,10 @@
     "knuth-shuffle": "^1.0.8"
   },
   "devDependencies": {
+    "@types/jest": "^24.0.25",
+    "jest": "^24.9.0",
     "prettier": "^1.19.1",
+    "ts-jest": "^24.2.0",
     "tslint": "^5.20.1",
     "tslint-config-airbnb": "^5.11.2",
     "tslint-config-prettier": "^1.18.0",
