--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chalk": "^3.0.0",
+    "inquirer": "^7.0.1",
     "knuth-shuffle": "^1.0.8"
   },
   "devDependencies": {
+    "@types/inquirer": "^6.5.0",
     "@types/jest": "^24.0.25",
     "jest": "^24.9.0",
     "prettier": "^1.19.1",
